fix line break in statusers

--- a/public/Service/Themes/base-layout.css
+++ b/public/Service/Themes/base-layout.css
@@ -1540,6 +1540,7 @@ a {
 /* Users Online */
 #statusers {
   & a {
+    display: inline-block;
     margin-right: 5px;
     white-space: nowrap;
 
